# second-brain-router

./: Cargo.toml  NOTES.md  README.md  TODOS.md
.github/workflows/: ci.yml
config/: default.toml
crates/sbr-daemon/: Cargo.toml
crates/sbr-daemon/src/: config.rs  main.rs
crates/sbr-daemon/src/capture/: ax_watcher.rs  mod.rs  screenshot.rs
crates/sbr-daemon/src/engine/: context.rs  mod.rs  router.rs
crates/sbr-daemon/src/memory/: chunker.rs  embedder.rs  mod.rs  store.rs
docker/: README.md  docker-compose.yml
