[package]
name = "sbr-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sbr-daemon"
path = "src/main.rs"

[dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }

# macOS AX API
core-foundation = "0.9"
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSWorkspace", "NSRunningApplication"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# config dir
dirs = "5"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# utils
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
