[package]
name = "sbr-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sbr-daemon"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
core-foundation = "0.9"
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = [
    "NSWorkspace",
    "NSRunningApplication",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
qdrant-client = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
xcap = "0.9.6"
